feat: update JCF Repository